clusters/nl/media/jellyfin/media.cianfr.one-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-media.cianfr.one
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: cianfr.one-acme
spec:
  ingressClassName: nginx
  rules:
    - host: &host media.cianfr.one
      http:
        paths:
          - backend:
              service:
                name: jellyfin
                port:
                  number: 8096
            path: /
            pathType: Prefix
  tls:
    - hosts: [*host]
      secretName: jellyfin-media.cianfr.one-tls
